--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900;1000&family=Poor+Story&family=Tenor+Sans&display=swap');
 
 *{
     margin: 0;
@@ -22,7 +23,6 @@ html{
 .naav-bar{
     max-width: 1300px;
     width: 100%;
-    
     margin-left: auto;
     margin-right: auto;
     /* background-color: #e84393; */
@@ -50,33 +50,33 @@ html{
     align-items: center;
 
 }
+.naav-bar .top .right h1{
+    font-family: 'Cairo', sans-serif;
+    font-size: 3.5rem;
+
+}
 .naav-bar .top .right img{
     width: 9rem;
     margin-left: 2rem;
 }
 .naav-bar .bottn{
     width: 100%;
-    height: 4rem;
+    height: 7rem;
     background-color: green;
     border-bottom: 2px solid orange;
 }
 .naav-bar .bottn ul{    
     width: 100%;
-    
-    padding: .2rem .2rem;
+    padding: 1.3rem .2rem;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
     margin-left: auto;
     margin-right: auto;
+    
 }
-/* .naav-bar .bottn ul li{
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-around;
-    align-items: center;
-} */
+
 .naav-bar .bottn ul li a{
     list-style: none;
     text-decoration: none;
@@ -86,10 +86,15 @@ html{
     color: aliceblue;
     margin-right: 1.5rem;
     transition: .5s ease-in-out;
+    font-family: 'Cairo', sans-serif;
+    padding: 1rem;
+    border-radius: 1rem;
 
 }
 .naav-bar .bottn ul li a:hover{
     border-bottom: 2px solid orange ;
+    color: black;
+    background-color: aqua;
 }
 
 @media (max-width:990) {
@@ -111,9 +116,9 @@ html{
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-    height: 70vh;
+    height: 68vh;
     background-image: url('../images/305454630_503544778443149_7077664787095973535_n\ \(1\).jpg');
-    background-size: 100% 70vh;
+    background-size: 100% 68vh;
     position: relative;
 }
 .about-us .logo{
@@ -174,7 +179,7 @@ html{
 .contact-us-body{
     width: 100%;
     max-width: 1300px;
-    height: 70vh;
+    height: 66.5vh;
 }
 .contact-us-body .top {
     
@@ -182,18 +187,15 @@ html{
     margin-left: auto;
     margin-right: auto;
     height: 30rem;
-    padding: 2rem 3rem;
-    margin-top: 1rem;
     display: flex;
     justify-content: space-around;
 
 }
 .contact-us-body .top img{
-    width: 25rem;
+    width: 40rem;
 }
 .contact-us-body .foot{
     width: 70%;
-    
     height: 30rem;
     margin-left: auto;
     margin-right: auto;
@@ -223,6 +225,8 @@ html{
 .contact-us-body .foot .card-contain .crd label{
     font-size: 3rem;
     margin-right: 2rem;
+    font-family: 'Cairo', sans-serif;
+    margin-right: 5rem;
 }
 .contact-us-body .foot .card-contain .crd a{
     text-decoration: none;
@@ -244,6 +248,15 @@ html{
     min-height: 100vh;
     margin-top: 1rem;
     padding: 2rem;
+    position: relative;
+}
+.treatment-body .float-img1{
+    position: absolute;
+    top: 10rem;
+}
+.treatment-body .float-img1 img{
+    width: 30rem;
+    box-shadow: 5px 5px 2px 2px rgba(209, 200, 200, 0.486);
 }
 .treatment-body h1{
     font-size: 5rem;
@@ -254,9 +267,10 @@ html{
     text-align: end;
 }
 .treatment-body p{
-    font-size: 1.5rem;
+    font-size: 1.9rem;
     text-align: start;
     direction: rtl;
+    font-family: 'Cairo', sans-serif;
     
 }
 
@@ -264,12 +278,12 @@ html{
 /* treatment-ways */
     .ways-body{
         width: 80%;
-        height: 70vh;
-        
+        height: 67vh;
         margin-left: auto;
         margin-right: auto;
         margin-top: 1rem;
         padding: 2rem;
+        position: relative;
     }
     .ways-body h1{
         font-size: 3rem;
@@ -277,9 +291,18 @@ html{
         text-align: center;
     }
     .ways-body p{
-        font-size: 1.5rem;
-    text-align: start   ;
+    font-size: 2rem;
+    text-align: start;
     direction: rtl;
+    font-family: 'Cairo', sans-serif;
+    }
+    .ways-body .float-img1{
+        position: absolute;
+        top: 10rem;
+    }
+    .ways-body .float-img1 img{
+        width: 30rem;
+    box-shadow: 5px 5px 2px 2px rgba(209, 200, 200, 0.486);
     }
 
 /* end treatment-ways */
@@ -325,12 +348,12 @@ html{
 /* our advan */
 .our-advan{
     width: 80%;
-        height: 70vh;
-       
+        height: 67vh;
         margin-left: auto;
         margin-right: auto;
         margin-top: 1rem;
         padding: 2rem;
+        position: relative;
 }
 .our-advan h1{
     font-size: 3rem;
@@ -338,9 +361,20 @@ html{
         text-align: center;
 }
 .our-advan p{
-    font-size: 1.5rem;
+    font-size: 2rem;
+    word-spacing: .3rem;
     text-align: start   ;
     direction: rtl;
+    font-family: 'Cairo', sans-serif;
+}
+.our-advan .float-img1 {
+    position: absolute;
+    top: 2rem;
+    left: 5rem;
+}
+.our-advan .float-img1 img{
+    width: 30rem;
+    box-shadow: 5px 5px 2px 2px rgba(209, 200, 200, 0.486);
 }
 
 /* end our advan */
@@ -355,16 +389,22 @@ html{
 }
 .footer h5{
     font-size: 1.5rem;
-    color: bisque;
+    color:white;
     text-align: center;
     
 }
 .footer .icons{
     margin: 0 auto;
-    width: 25rem;
+    width: 30rem;
     font-size: 3rem;
-    color: bisque;
+    color: white;
     align-items: center;
+}
+.footer .icons .icn{
+    font-size: 4rem;
+    margin-right: 2rem;
+    margin-top: .5rem;
+    cursor: pointer;
 }
 
 
