--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
     outline: none;
     border: none;
     text-decoration: none;
+   
     
 }
 body{
@@ -24,7 +25,7 @@ html{
 }
 /* nav bar */
 .naav-bar{
-    max-width: 1300px;
+    
     width: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -52,6 +53,25 @@ html{
     .naav-bar ul{
       width: 750px;
     }
+    
+    
+
+       
+}
+@media (max-width:568px){
+    .naav-bar{
+        width: 560px;
+    }
+
+    .naav-bar .top{
+        border-bottom: 2px solid black;
+        width: 560px;
+    }
+    .naav-bar ul{
+      width: 560px;
+      
+    }
+    
     
     
 
@@ -91,6 +111,22 @@ html{
     .naav-bar .top .left h4{
         font-size: 1.5rem;
     }
+}
+@media (max-width:568px){
+    .naav-bar .top .left p{
+        font-size: 1rem;
+        margin-top: 2rem;
+    }
+    .naav-bar .top .left h4{
+        font-size: .6rem;
+    }
+    .naav-bar .right h1{
+        font-size: 1rem;
+    }
+    .naav-bar .right img{
+        height: 1rem;
+    }
+
 }
 
 .naav-bar .top .right{
@@ -140,9 +176,16 @@ html{
     margin-right: auto;
     width: 100%;
     height: 7rem;
+    margin-bottom: -1rem;
     background-color: #008b52;
     border-bottom: 2px solid orange;
 }
+@media (max-width:568px){
+    .naav-bar ul{
+        padding: .1rem .1 rem;
+    }
+}
+
 
 .naav-bar  ul li a{
     list-style: none;
@@ -157,6 +200,12 @@ html{
     padding: 1rem;
     border-radius: 1rem;
 
+}
+@media (max-width:568px){
+    .naav-bar  ul li a{
+        font-size: 1rem;
+        padding: .1rem;
+    }
 }
 @media (max-width:768px){
     .naav-bar  ul li a{
@@ -176,20 +225,55 @@ html{
 /* end nav bar */
 /* about us */
 .about-us{
-    max-width: 1300px;
     width: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-    height: 68vh;
-    background-image: url('../images/305454630_503544778443149_7077664787095973535_n\ \(1\).jpg');
-    background-size: 100% 68vh;
+    height: 70vh;
     position: relative;
+}
+.about-us .main-img{
+    width: 100%;
+    height: 70vh;
+}
+.about-us .main-img img{
+
+    width: 100%;
+    height: 70vh;
 }
 @media (max-width:768px){
     .about-us{
         width: 750px;
+        background-size: 100% 68vh;
+    }
+    .about-us .main-img{
+        width: 750px;
+    }
+    .about-us .main-img img{
+        width: 750px;
+    }
+}
+@media (max-width:992px){
+    .about-us{
+        width: 990px;
+        background-size: 990px 68vh;
+    }
+    .about-us .main-img{
+        width: 990px;
+    }
+    .about-us .main-img img{
+        width: 990px;
+    }
+}
+@media (max-width:568px){
+    .about-us{
+        width: 560px;
+        background-size: 560px 68vh;
+    }
+    .about-us .main-img {
+        width: 560px;
+    }
+    .about-us .main-img img{
+        width: 560px;
     }
 }
 .about-us .logo{
@@ -269,6 +353,12 @@ html{
     }
 
 }
+@media (max-width :568px){
+    .contact-us-body{
+        width: 560px;
+    }
+
+}
 .contact-us-body .top {
     
     width: 70%;
@@ -288,6 +378,13 @@ html{
         height: 25rem;
     }
 }
+@media (max-width :568px){
+    .contact-us-body .top img{
+        width: 25rem;
+        height: 15rem;
+    }
+}
+
 
 .contact-us-body .foot{
     width: 70%;
@@ -297,11 +394,25 @@ html{
     padding: 3rem;
     margin-top: -5rem;
 }
+@media (max-width :568px){
+    .contact-us-body .foot{
+        width: 90%;
+       
+        margin-top: -10rem;
+        padding: 1rem;
+    }
+}
+
 .contact-us-body .foot h1{
     font-size: 3rem;
     font-weight: bolder;
     text-align: center;
     color: #e84393;
+}
+@media (max-width :568px){
+    .contact-us-body .foot h1{
+        font-size: 2rem;
+    }
 }
 .contact-us-body .foot .card-contain{
     display: flex;
@@ -311,6 +422,12 @@ html{
     justify-content: space-between;
     padding: 1rem;
     
+}
+@media (max-width :568px){
+    .contact-us-body .foot .card-contain{
+       
+        height: 25rem;
+    }
 }
 .contact-us-body .foot .card-contain h4{
     font-size: 1.9rem;
@@ -335,6 +452,12 @@ html{
     font-family: 'Cairo', sans-serif;
     
 }
+@media (max-width :568px){
+    .contact-us-body .foot .card-contain .crd label{
+        font-size: 1.2rem;
+        font-weight: 900;
+    }
+}
 .contact-us-body .foot .card-contain .brans{
    
     width: 80%;
@@ -345,6 +468,8 @@ html{
     margin-top: 1rem;
     margin-left: -25rem;
 }
+
+
 @media (max-width:992px){
     .contact-us-body .foot .card-contain .brans{
         width: 70rem;
@@ -369,15 +494,25 @@ html{
     font-size: 1.3rem;
     margin-right: .9rem;
 }
+@media (max-width:568px){
+.crd #bran1,
+ .crd #bran2,
+ .crd #bran3{
+    font-size: 1rem;
+    margin-right: .9rem;
+}
+}
 .contact-us-body .foot .card-contain .crd a{
     text-decoration: none;
     font-size: 1.5rem;
 
 }
+
 .contact-us-body .foot .card-contain .crd div{
     font-size: 1.5rem;
     font-weight: 900;
 }
+
 /* end contact us */
 
 /* treatment */
@@ -401,6 +536,13 @@ html{
 @media (max-width:768px){
     .treatment-body{
         width: 750px;
+    }
+    
+    
+}
+@media (max-width:568px){
+    .treatment-body{
+        width: 560px;
     }
     
     
@@ -449,7 +591,7 @@ html{
 /* treatment-ways */
     .ways-body{
         width: 80%;
-        height: 67vh;
+        /* height: 67vh; */
         margin-left: auto;
         margin-right: auto;
         margin-top: 1rem;
@@ -464,6 +606,11 @@ html{
     @media (max-width:768px){
         .ways-body{
             width: 750px;
+        }
+    }
+    @media (max-width:568px){
+        .ways-body{
+            width: 560px;
         }
     }
     .ways-body h1{
@@ -520,6 +667,12 @@ html{
 @media (max-width:768px){
     .our-staf{
         width: 750px;
+
+    }
+}
+@media (max-width:568px){
+    .our-staf{
+        width: 560px;
 
     }
 }
@@ -608,6 +761,11 @@ html{
         width: 750px;
     }
 }
+@media (max-width:568px){
+    .our-advan{
+        width: 560px;
+    }
+}
 .our-advan h1{
     font-size: 3rem;
     font-weight: 900;
@@ -673,6 +831,11 @@ html{
             width: 750px;
         }
     }
+    @media (max-width:568px){
+        .drug-kinds-body{
+            width: 560px;
+        }
+    }
     .drug-kinds-body h1{
         text-align: center;
         color: #e84393;
@@ -704,14 +867,36 @@ html{
 
 /* footer */
 .footer{
-    background-color: rgb(48, 40, 40);
+    background-color: #412554;
     width: 100%;
-    max-width: 1300px;
-    height: 10rem;
+   
+    height: 9rem;
     padding: 1.5rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+@media (max-width:992px){
+    .footer{
+        width: 990px;
+    }
+}
+@media (max-width:768px){
+    .footer{
+        width: 750px;
+    }
+}
+@media (max-width:768px){
+    .footer{
+        width: 750px;
+    }
+}
+@media (max-width:568px){
+    .footer{
+        width: 560px;
+    }
 }
 .footer h5{
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     color:white;
     text-align: center;
     
@@ -724,10 +909,11 @@ html{
     align-items: center;
 }
 .footer .icons .icn{
-    font-size: 4rem;
-    margin-right: 2rem;
+    font-size: 2rem;
+    margin-right: 5rem;
     margin-top: .5rem;
     cursor: pointer;
+    color: aliceblue ;
 }
 
 
