--- a/css/style.css
+++ b/css/style.css
@@ -71,12 +71,22 @@ html{
       width: 560px;
       
     }
-    
-    
-    
-
-       
 }
+@media (max-width:480px){
+    .naav-bar{
+        width: 400px;
+    }
+
+    .naav-bar .top{
+        border-bottom: 2px solid black;
+        width: 400px;
+    }
+    .naav-bar ul{
+      width: 400px;
+    }
+
+}
+
 .naav-bar .top{
     display: flex;
     justify-content: space-between;
@@ -212,6 +222,13 @@ html{
         font-size: 1.2rem;
     }
 }
+@media (max-width:480px){
+    .naav-bar  ul li a{
+        font-size: .8rem;
+    }
+}
+
+
 .naav-bar  ul li a:hover{
     border-bottom: 2px solid orange ;
     color: black;
@@ -276,12 +293,34 @@ html{
         width: 560px;
     }
 }
+@media (max-width:480px){
+    .about-us{
+        width: 400px;
+        background-size: 400px 68vh;
+    }
+    .about-us .main-img {
+        width: 400px;
+    }
+    .about-us .main-img img{
+        width: 400px;
+    }
+}
+
+
 .about-us .logo{
     position: absolute;
     top: 5rem;
     right: 6rem;
     width: 150px;
 }
+@media (max-width:480px){
+    .about-us .logo{
+    top: 5rem;
+    right: 15rem;
+    width: 100px;
+    }
+}
+
 /* .about-us .bref{
     display: flex;
     flex-direction: column;
@@ -333,8 +372,8 @@ html{
 /* contact us */
 .contact-us-body{
     width: 100%;
-    max-width: 1300px;
-    height: 66.5vh;
+    
+    height: 70vh;
 }
 @media (max-width :992px){
     .contact-us-body{
@@ -356,6 +395,12 @@ html{
 @media (max-width :568px){
     .contact-us-body{
         width: 560px;
+    }
+
+}
+@media (max-width :480px){
+    .contact-us-body{
+        width: 400px;
     }
 
 }
@@ -394,6 +439,12 @@ html{
     padding: 3rem;
     margin-top: -5rem;
 }
+@media (max-width :480px){
+    .contact-us-body .foot{
+        padding: 1rem;
+    }
+}
+
 @media (max-width :568px){
     .contact-us-body .foot{
         width: 90%;
@@ -402,6 +453,9 @@ html{
         padding: 1rem;
     }
 }
+
+
+
 
 .contact-us-body .foot h1{
     font-size: 3rem;
@@ -458,6 +512,12 @@ html{
         font-weight: 900;
     }
 }
+@media (max-width :480px){
+    .contact-us-body .foot .card-contain .crd label{
+        font-size: 1.1rem;
+    }
+}
+
 .contact-us-body .foot .card-contain .brans{
    
     width: 80%;
@@ -487,6 +547,16 @@ html{
        
     }
 }
+@media (max-width:480px){
+    .contact-us-body .foot .card-contain .brans{
+       
+        height: 70rem;
+      margin-left: -1rem;
+     
+        
+        width: 400px;
+    }
+}
 
  .crd #bran1,
  .crd #bran2,
@@ -502,6 +572,17 @@ html{
     margin-right: .9rem;
 }
 }
+@media (max-width:480px){
+.crd #bran1,
+ .crd #bran2,
+ .crd #bran3{
+    font-size: .8rem;
+    margin-right: .9rem;
+}
+
+}
+
+
 .contact-us-body .foot .card-contain .crd a{
     text-decoration: none;
     font-size: 1.5rem;
@@ -512,6 +593,15 @@ html{
     font-size: 1.5rem;
     font-weight: 900;
 }
+@media (max-width:480px){
+    .contact-us-body .foot .card-contain .crd div{
+        font-size: 1rem;
+    }
+    .contact-us-body .foot .card-contain .crd a{
+        font-size: 1rem;
+    }
+}
+
 
 /* end contact us */
 
@@ -547,6 +637,14 @@ html{
     
     
 }
+@media (max-width:480px){
+    .treatment-body{
+        width: 400px;
+    }
+    
+    
+}
+
 .treatment-body .float-img1{
     position: absolute;
     top: 10rem;
@@ -561,6 +659,14 @@ html{
     }
     .treatment-body .float-img1{
         top: 30rem;
+    }
+}
+@media (max-width:480px){
+    .treatment-body .float-img1 img{
+        width: 10rem;
+    }
+    .treatment-body .float-img1{
+        top: 35rem;
     }
 }
 .treatment-body h1{
@@ -586,12 +692,21 @@ html{
     }
     
 }
+@media (max-width:480px){
+
+.treatment-body p{
+        font-size: 1rem;
+        font-weight: 700;
+    }
+}
+
+
 
 /* end treatment */
 /* treatment-ways */
     .ways-body{
         width: 80%;
-        /* height: 67vh; */
+        height: 69vh;
         margin-left: auto;
         margin-right: auto;
         margin-top: 1rem;
@@ -613,6 +728,12 @@ html{
             width: 560px;
         }
     }
+    @media (max-width:480px){
+        .ways-body{
+            width: 400px;
+        }
+    }
+
     .ways-body h1{
         font-size: 3rem;
         font-weight: 900;
@@ -624,6 +745,9 @@ html{
     direction: rtl;
     font-family: 'Cairo', sans-serif;
     }
+
+    
+
     .ways-body .float-img1{
         position: absolute;
         top: 10rem;
@@ -645,6 +769,15 @@ html{
             width: 20rem;
         } 
         } 
+
+        @media (max-width:480px){
+            .ways-body p{
+                font-size: 1.2rem;
+                }
+                .ways-body .float-img1{
+                    top: 50rem;
+                }
+        }
     
 
 /* end treatment-ways */
@@ -673,6 +806,12 @@ html{
 @media (max-width:568px){
     .our-staf{
         width: 560px;
+
+    }
+}
+@media (max-width:480px){
+    .our-staf{
+        width: 400px;
 
     }
 }
@@ -766,6 +905,12 @@ html{
         width: 560px;
     }
 }
+@media (max-width:480px){
+    .our-advan{
+        width: 400px;
+    }
+}
+
 .our-advan h1{
     font-size: 3rem;
     font-weight: 900;
@@ -804,6 +949,15 @@ html{
         left: 2rem;
     }
 }
+@media (max-width:480px){
+    .our-advan .float-img1 img{
+        width: 10rem;
+    }
+    .our-advan .float-img1{
+        left: 2rem;
+        top: 1rem;
+    }
+}
 
 /* end our advan */
 
@@ -836,6 +990,12 @@ html{
             width: 560px;
         }
     }
+    
+    @media (max-width:480px){
+        .drug-kinds-body{
+            width: 400px;
+        }
+    }
     .drug-kinds-body h1{
         text-align: center;
         color: #e84393;
@@ -858,6 +1018,14 @@ html{
         font-size: 1.5rem;
         font-weight: 600;
     }
+    @media (max-width:480px){
+        .drug-kinds-body .tmp-contain ul {
+            
+            font-size: 1rem;
+            
+        }
+    }
+
     .drug-kinds-body .tmp-contain .tmp p{
         font-size: 1.3rem;
         font-weight: 500;
@@ -869,7 +1037,6 @@ html{
 .footer{
     background-color: #412554;
     width: 100%;
-   
     height: 9rem;
     padding: 1.5rem;
     margin-left: auto;
@@ -895,6 +1062,13 @@ html{
         width: 560px;
     }
 }
+@media (max-width:480px){
+    .footer{
+        width: 400px;
+    }
+}
+
+
 .footer h5{
     font-size: 1.2rem;
     color:white;
