--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ html{
     align-items: center;
     margin-left: auto;
     margin-right: auto;
-    width: 100%;
+   
     height: 7rem;
     margin-bottom: -1rem;
     background-color: #008b52;
@@ -192,7 +192,7 @@ html{
 }
 @media (max-width:568px){
     .naav-bar ul{
-        padding: .1rem .1 rem;
+        padding: 0rem 0rem;
     }
 }
 
@@ -235,6 +235,12 @@ html{
     background-color: aqua;
 }
 
+@media (max-width:480px){
+    .naav-bar ul{
+        padding: 0rem 0rem;
+        
+    }
+}
 @media (max-width:992) {
     
 }
